# jax-ai-stack

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CNAME  README.md  RELEASING.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  style.css
.github/workflows/: lint.yaml  nightly.yaml  notebooks.yaml  release.yml  test.yaml  tmp.yaml
_build/doctrees/: JAX_Vision_transformer.doctree  JAX_basic_text_classification.doctree  JAX_examples_image_segmentation.doctree  JAX_for_LLM_pretraining.doctree  JAX_for_PyTorch_users.doctree  JAX_porting_PyTorch_model.doctree  contributing.doctree  digits_diffusion_model.doctree  digits_vae.doctree  environment.pickle  getting_started_with_jax_for_AI.doctree  index.doctree  tutorials.doctree
_sources/: index.rst
_static/: documentation_options.js
_static/css/: custom.css
docs/: JAX_Vision_transformer.md  JAX_examples_image_segmentation.ipynb  JAX_examples_image_segmentation.md  JAX_for_LLM_pretraining.ipynb  JAX_for_LLM_pretraining.md  JAX_for_PyTorch_users.ipynb  JAX_image_captioning.md  JAX_machine_translation.ipynb  JAX_machine_translation.md  JAX_porting_HF_model.ipynb  JAX_porting_HF_model.md  JAX_porting_PyTorch_model.ipynb  JAX_porting_PyTorch_model.md  JAX_transformer_text_classification.md  JAX_visualizing_models_metrics.ipynb  JAX_visualizing_models_metrics.md  README.md  conf.py  contributing.md  data_loaders_for_multi_device_setups_with_jax.ipynb  data_loaders_for_multi_device_setups_with_jax.md  data_loaders_on_cpu_with_jax.ipynb  data_loaders_on_cpu_with_jax.md  data_loaders_on_gpu_with_jax.ipynb  data_loaders_on_gpu_with_jax.md  digits_diffusion_model.ipynb  digits_diffusion_model.md  digits_vae.ipynb  digits_vae.md  getting_started_with_jax_for_AI.ipynb  getting_started_with_jax_for_AI.md  index.md  index.rst  requirements.txt  tutorials.md
docs/learning_jax/: README.md
docs/learning_jax/code-exercises/: 1 - JAX AI Stack.ipynb  10 - Sharding & Parallelism.ipynb  11 - Optax optimizers.ipynb  2 - NumPy and JAX NumPy.ipynb  3 - Intro to NNX for PyTorch Users.ipynb  4 - MNIST example.ipynb  5 - Chex_ JAX & Flax NNX Reliability.ipynb  6 - Debugging JAX and Flax NNX.ipynb  7 - Grain for data loading.ipynb  8 - Orbax for checkpointing.ipynb  9 - Serving JAX with vLLM_SGLang.ipynb
docs/source/: JAX_Vision_transformer.md  JAX_basic_text_classification.ipynb  JAX_basic_text_classification.md  JAX_examples_image_segmentation.ipynb  JAX_examples_image_segmentation.md  JAX_for_LLM_pretraining.ipynb  JAX_for_LLM_pretraining.md  JAX_for_PyTorch_users.ipynb  JAX_for_PyTorch_users.md  JAX_image_captioning.md  JAX_machine_translation.ipynb  JAX_machine_translation.md  JAX_porting_HF_model.ipynb  JAX_porting_HF_model.md  JAX_porting_PyTorch_model.ipynb  JAX_porting_PyTorch_model.md  JAX_time_series_classification.ipynb  JAX_time_series_classification.md  JAX_transformer_text_classification.ipynb  JAX_transformer_text_classification.md  JAX_using_LoRA.ipynb  JAX_using_LoRA.md  JAX_visualizing_models_metrics.ipynb  JAX_visualizing_models_metrics.md  blog.md  conf.py  contributing.md  data_loaders.md  data_loaders_for_multi_device_setups_with_jax.md  data_loaders_on_cpu_with_jax.ipynb  data_loaders_on_cpu_with_jax.md  data_loaders_on_gpu_with_jax.ipynb  data_loaders_on_gpu_with_jax.md  digits_diffusion_model.ipynb  digits_diffusion_model.md  digits_vae.ipynb  digits_vae.md  events.md  examples.md  getting_started.md  (+26 more)
docs/source/_static/css/: custom.css
docs/source/_templates/: navbar-top.html
docs/source/ecosystem_overview/: architectural.md  comparative.md  conclusion.md  core.md  extended.md  modular.md  the_ecosystem_overview_tr.md
jax_ai_stack/: __init__.py
jax_ai_stack/tests/: test_chex.py  test_nnx_with_grain.py  test_nnx_with_optax.py  test_nnx_with_optax3.py  test_nnx_with_orbax.py  test_nnx_with_qwix.py  test_nnx_with_tfds.py  test_nnx_with_tunix.py  test_tf_with_orbax_export.py
jax_ml_stack/: __init__.py
jax_ml_stack/tests/: test_nnx_with_grain.py  test_nnx_with_optax.py  test_nnx_with_tfds.py
