[project]
name = "jax-ai-stack"
dynamic = ["version"]
description = "Collection of packages for defining & training AI models with JAX."
requires-python = ">= 3.11"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "jax-ai-stack authors", email="jax-dev+jax-ai-stack@google.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
]
keywords = []

# pip dependencies of the project
dependencies = [
    "chex==0.1.91",
    "grain==0.2.14",
    "jax==0.8.1",
    "flax==0.12.1",
    "ml_dtypes==0.5.4",
    "optax==0.2.6",
    "orbax-checkpoint==0.11.28",
    "orbax-export==0.0.8",
]

[project.urls]
homepage = "https://jaxstack.ai"
repository = "https://github.com/jax-ml/jax-ai-stack"
# Other: `documentation`, `changelog`

[project.optional-dependencies]
# Development deps (unittest, linting, formating,...)
# Installed through `pip install .[dev]`
dev = [
    "pytest",
    "pytest-xdist",
]

# TensorFlow datasets is an extra because it has a large install footprint.
tfds = [
    "tensorflow==2.20.0",
    "tensorflow_datasets==4.9.9",
]

# Grain is now part of the default installation; keep this for
# backward compatibility.
grain = []

[tool.pyink]
# Formatting configuration to follow Google style-guide
line-length = 80
preview = true
pyink-indentation = 2
pyink-use-majority-quotes = true

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
]

[tool.setuptools]
packages = ["jax_ai_stack"]
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "jax_ai_stack.__version__"}

[tool.ruff.lint.per-file-ignores]
# F811: Redefinition of unused name.
"docs/source/digits_vae.ipynb" = ["F811"]
